syntax = "proto3";

package io.github.vinicreis.dht.core.model.request;

import "io/github/vinicreis/dht/core/model/node.proto";

message LeaveRequest {
  Node node = 1;
  Node previous = 2;
}
